@@ -4,6 +4,8 @@
   fix the symlink to directory entries (Olaf Dreesen)
   close ftp-uploaded files in cleanup() (Johannes Ziemke)
   fix some bizarre ftp races that caused assertion failures (Johannes Ziemke)
+  look for theora in .ogg files and say they are video/ogg (requires
+    SUPPORT_MIMEMAGIC)
 
 0.10:
   add multi-ranges (only used by the Acrobat Reader plugin AFAIK)
